--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -33,7 +33,9 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  dev:
+    environment: Development  
+    
     runs-on: ubuntu-latest
 
     steps:
