--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -17,7 +17,7 @@
 # For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
 
-name: Build and deploy ASP.Net Core app to an Azure Web App
+name: CD
 
 env:
   AZURE_WEBAPP_NAME: 'mywebapp6149'    # set this to the name of your Azure Web App
@@ -25,8 +25,6 @@ env:
   DOTNET_VERSION: '9'                 # set this to the .NET Core version to use
 
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
 
 permissions:
